# somaticseq

./: .gitignore  .ssSomaticSeq.Wrapper.sh.swp  Dockerfile  LICENSE.txt  MODULES.md  Merge_5CallSets.sh  MergedVCF_to_TSV.snv.150418.sh  MergedVCF_to_TSV.snv.sh  README.md  README.md.save  SSeq_DeepSeq2tsv.indel.py  SSeq_DeepSeq2tsv.py  SSeq_merged.vcf2tsv.02.py  SSeq_merged.vcf2tsv.py  SSeq_merged.vcf2tsv_r20150406.py  SSeq_selectsites2tsv.py  SSeq_ssvcf2tsv.py  SSeq_tsv2vcf.py  SSeq_tsv2vcf_20150405.py  SSeq_tsv2vcf_multiSample.py  SSeq_vcf2tsv.py  SSeq_vcf2tsv_multiBam.py  SSeq_vcf2tsv_multiPairBam.py  SSeq_vcf2tsv_multipairedbam.py  SomaticSeq.INDEL.sh  SomaticSeq.SNV.sh  SomaticSeq.Wrapper.2.sh  SomaticSeq.Wrapper.SEQC2.sh  SomaticSeq.Wrapper.multiSample.sh  SomaticSeq.Wrapper.sh  VERSION  ada_model_predictor.R  attach_pileupVAF.py  complex2indel.py  data.html  genomic_file_handlers.py  index.html  merged.vcf_to_sseq.indel.tsv.sh  merged.vcf_to_sseq.snv.tsv.sh  modify_MuTect.py  (+21 more)
.codeboarding/: External_Tool_Execution.md  Machine_Learning_Output.md  Variant_Data_Processing.md  Variant_Post_processing.md  on_boarding.md
DREAM_Stage_3/: truth.snp.vcf
Dockerfiles/: bwa.0.7.17_samtools.dockerfile  picard.2.27.5.dockerfile  sambamba.0.7.1.dockerfile  sambamba.1.0.0.dockerfile  samtools.1.13.dockerfile  samtools.1.19.2.dockerfile  scalpel.0.5.4.dockerfile  somaticseq.base-1.4.dockerfile  somaticseq.base-1.5.dockerfile  somaticseq.base-1.6.dockerfile  somaticseq.base-1.7.dockerfile  somaticseq.base-1.8.dockerfile  somaticseq.dev.dockerfile  somaticseq.latest.dockerfile  somaticseq.master.dockerfile  somaticseq.release.dockerfile  strelka.2.9.10.dockerfile  tabix.1.19.dockerfile
Run_5_callers/: Step_1_Split_BAM_by_chromosome.sh  Step_2_Run_5_tools.sh
Run_5_callers/individual_callers/: JSM2VCF.sh  JointSNVMix2.sh  MuSE.merge.sh  MuSE.sh  MuTect.sh  SomaticSniper.sh  VarDict.sh  VarScan2.sh
Truth_for_DREAM_Challenge_3/: ignore.GRCh38.bed  ignore.b37.bed  ignore.bed  truth.indel.GRCh38.vcf  truth.indel.b37.vcf  truth.snp.GRCh38.vcf
Users_Manual/: Manual.aux  Manual.tex
docs/: Manual.aux  Manual.bbl  Manual.blg  Manual.out  Manual.synctex(busy)  Manual.tex  Manual.tex.backup  Manual.toc  Refs.bib  seqc2.md  train_for_classifiers.md
example/: README.md  Varsim.somatic.truth.vcf  invoke_dockerized_tumor_normal_callers.sh  invoke_dockerized_tumor_only_callers.sh  paired_somaticseq_example.sh  single_somaticseq_example.sh  tiny.dict  tiny.fa.fai  tiny_dbsnp.vcf  tiny_dbsnp.vcf.gz.tbi
example/paired_example/: MuTect2.vcf
example/tumor_only_example/: VarDict.vcf
genomicFileHandler/: concat.py  genomic_file_handlers.py  pileup_reader.py  read_info_extractor.py
r_scripts/: ada_cross_validation.R  ada_model_builder.R  ada_model_builder_minus_indel-length.R  ada_model_builder_noDP.R  ada_model_builder_ntChange.R  ada_model_predictor.R  cross_validate_reduced.sh  cross_validate_reduced_indel.sh  xgboost_model_builder_ntChange.R  xgboost_model_predictor.R
r_scripts_NoSNP/: ada_cross_validate_NoDBSNP.R  ada_cross_validation_noSNP.R  ada_model_builder_minus_indel_length_noDP.R  ada_model_builder_noDP.R  ada_model_predictor_NOSNP.R  cross_validate_reduced.sh  cross_validate_reduced_indel.sh  reduce_numCallers.sh
somaticseq/: SSeq_tsv2vcf.py  __init__.py  _version.py  annotate_caller.py  bam_features.py  combine_callers.py  defaults.py  ntchange_type.py  py_xgboost.py  run_somaticseq.py  sequencing_features.py  single_sample_vcf2tsv.py  somatic_tsv2vcf.py  somatic_vcf2tsv.py  somatic_xgboost.py  somaticseq_parallel.py  tsv2vcf.py
somaticseq/cli/: main.py
somaticseq/genomicFileHandler/: concat.py  genomic_file_handlers.py  pileup_reader.py  read_info_extractor.py
somaticseq/genomic_file_parsers/: concat.py  genomic_file_handlers.py  pileup_reader.py  read_info_extractor.py
somaticseq/utilities/: BAM_filter.py  README.md  attach_pileupVAF.py  bamQC.py  bedFileHandler.py  combo_callers_evaluator.py  filter_SomaticSeq_VCF.py  linguistic_sequence_complexity.py  lociCounterWithLabels.py  lociCounters.py  multi-nucleotide_phaser.py  paired_end_bam2fastq.py  plot_TPvsFP.py  reformat_VCF2SEQC2.py  remove_callers_from_somaticseq_tsv.py  split_Bed_into_equal_regions.py  split_bed_into_equal_regions.py  split_mergedBed.py  tally_MyVCF_vs_Truth.py  tally_variants_from_multiple_vcfs.py  trimSoftClippedReads.py  variant_annotation.py  vcfsorter.pl
somaticseq/vcfModifier/: complex2indel.py  copy_TextFile.py  getUniqueVcfPositions.py  leftAlign.py  modify_JointSNVMix2.py  modify_MuTect.py  modify_MuTect2.py  modify_SomaticSniper.py  modify_Strelka.py  modify_VarDict.py  modify_VarScan2.py  modify_ssMuTect2.py  modify_ssStrelka.py  splitVcf.py  (+1 more)
tests/: conftest.py
trained_models/: IS3A.indel.tsv.model.RData  IS3A.snp.tsv.model.RData
utilities/: BAM_filter.py  DeeperSeqOnly_TsvAndVcf.py  README.md  SEQC2_parse_vcfin_tsvout.py  SEQC2_postProcess_InDel_VCF.py  add_linguistic_sequence_complexity_to_vcf.py  attach_PacBioTsvDepth.py  attach_pileupVAF.py  bamQC.py  bamVAF.py  bedFileHandler.py  callableLociCounter.py  combo_callers_evaluator.py  cross_validate_reduced.sh  discoverDeeperSeqCalls.py  estimate_PacBioErrorRate.py  estimate_SequencingErrorRate.py  filter_SomaticSeq_VCF.py  gene2codingBed.py  gene_sequence.py  getUniqueVcfPositions.py  highConfidenceBuilder.py  highConfidenceBuilder_2ndPass.py  linguistic_sequence_complexity.py  lociCounter.py  lociCounterWithLabels.py  modify_MuTect.py  modify_MuTect2.py  modify_Strelka.py  modify_VJSD.py  modify_VarDict.py  multi-nucleotide_phaser.py  multiSiteStats.py  paired_end_bam2fastq.py  plot_TPvsFP.py  recalibrate_ConfidenceLevels.py  recalibrate_baseon_deepSeq.py  reduce_numCallers.py  refGene_reader.py  reformat1000xCalls.py  (+16 more)
vcfModifier/: copy_TextFile.py  getUniqueVcfPositions.py  leftAlign.py  modify_JointSNVMix2.py  modify_MuTect.py  modify_MuTect2.py  modify_SomaticSniper.py  modify_Strelka.py  modify_VJSD.py  modify_VarDict.py  modify_VarScan2.py  modify_ssMuTect2.py  modify_ssStrelka.py  splitVcf.py  vcfIntersector.py
(+364 files in other folders)
